--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@mui/styles": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.54.1",
     "axios": "^1.7.7",
